|                                                                 |
|         - AWStats:                                              |
|               * apache: set statsdir if awstats is enabled      |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-05-07 Benedikt Heintel
	- LANGUAGES:
		* Japanes: added missing strings
		* Turkish: added missing strings
		* Polish: added missing strings

2007-05-11 Jan Porath
	-	ENGINE
		* fixed #228: .htaccess still stayed after deleting proteced area
		              wrong user and group deleting
		              no deleting of user content in .htaccess file (if exists)

2007-05-11 Malte Geierhos
	- GUI
		* fixed #248: Webmail Background Image fixed
	- SETUP
		* fixed #264: phptmp not copied on BSD* systems

2007-05-10 Jan Porath
	- GUI
		* fixed #258: change user password / protected area
		* fixed #238: undefined variable / hosting plan
		* fixed #251: adding exsisting user to db requires password
	- ENGINE
		* fixed: permission and user settings on subdomain folders
		* modified: excluded counting backup files in quota-engine

2007-05-09 Benedikt Heintel
	- CONFIGS:
		* fixed #240: missing copy of fastCGI files in working dir (SuSE 9.3)
		* fixed #253: wrong ISPCP_LICENSE in conf file of some distris
		* fixed #254: missing httpd.conf in working dir (OpenBSD)
		* fixed #255: missing copy of fastCGI files in working dir (OpenBSD)

2007-05-07 Benedikt Heintel
	- LANGUAGES:
		* Dutch: added missing strings
		* French: added missing strings
		* Romanian: added missing strings

2007-05-04 Benedikt Heintel
	- CONFIGS:
		* fixed #245: ftp alias not working
	- LANGUAGES:
		* Italian: added missing strings
		* Romanian: RC3 compatible
		* Russian: RC3 compatible

2007-05-03 Benedikt Heintel
	- LANGUAGES:
		* Chinese (UTF-8) added missing strings
		* Danish: RC3 compatible
		* Czech: RC3 compatible
		* Japanese: added missing strings